--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -1,14 +1,20 @@
 .navbar {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 0 2rem;
+    padding: 1rem;
     background-color: #2c3e50;
     color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    position: sticky;
+    /* position: sticky; */
     top: 0;
     z-index: 1000;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.navbar-logo {
+    flex-basis: 100%;
+    text-align: center;
 }
 
 .navbar-logo a {
@@ -26,9 +32,7 @@
 .navbar-links {
     list-style: none;
     display: flex;
-    align-items: center;
-    /* Ensure vertical alignment */
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .navbar-links li {
@@ -49,31 +53,23 @@
 .search-bar {
     display: flex;
     align-items: center;
-    /* Ensure vertical alignment */
-    margin-left: 1rem;
+    flex-basis: 100%;
+    justify-content: center;
 }
 
-@media (max-width: 768px) {
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 1rem;
+@media (min-width: 769px) {
+    .navbar-logo {
+        flex-basis: auto;
+        text-align: left;
     }
 
     .navbar-links {
-        flex-direction: column;
-        gap: 1rem;
-        width: 100%;
-        /* margin-top: 1rem; */
-    }
-
-    .navbar-links a {
-        font-size: 1.2rem;
+        flex-basis: auto;
+        justify-content: flex-start;
     }
 
     .search-bar {
-        margin-left: 0;
-        width: 100%;
-        justify-content: center;
+        flex-basis: auto;
+        justify-content: flex-start;
     }
 }
